tests/cases/fail/invalid_increment_target.cs
class Program {
    static void Main() {
        (1 + 2)++;
    }
}
